overflow fixed

--- a/front-end/src/pages/ProfilePage.css
+++ b/front-end/src/pages/ProfilePage.css
@@ -22,7 +22,7 @@ fieldset {
     padding: 10px; 
     
 }
-p {word-break: break-all} 
+
 
 .profile-nav {
  display: flex;
